--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
+    "react-country-state-city": "^1.1.12",
     "react-d3-tree": "^3.6.6",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
